# icub-gazebo-grasping-sandbox

./: .gitignore  .gitpod.yml  .metadata.json  CITATION.cff  CMakeLists.txt  CMakelists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: ad-request.md  bug-report.md  bug-report.yml  config.yml  discuss-idea.md  question.md
.github/workflows/: publish-docker.yml
dockerfiles/: Dockerfile  README.md  init-icubcontrib-local.sh  init-icubcontrib.sh  start-vnc-session-local.sh  start-vnc-session.sh
docs/: README.md  _config.yml  building-on-sandbox.md
gazebo/: CMakeLists.txt  README.md
gazebo/models/mustard_bottle/: model.config  model.rsdf  model.sdf
gazebo/models/mustard_bottle/meshes/: obj_000005.dae  obj_000005_collision.dae
gazebo/models/pudding_box/: model.config  model.rsdf  model.sdf
gazebo/models/pudding_box/meshes/: obj_000007.dae  obj_000007_collision.dae
gazebo/models/shelf/: model.config  model.rsdf  model.sdf
gazebo/models/table/: model.config  model.rsdf  model.sdf
gazebo/worlds/: icub-gazebo-grasping-sandbox-test.sdf  icub-gazebo-grasping-sandbox.sdf
scripts/: CMakeLists.txt  gc-icub-grasp.sh  icub-grasp-test.xml  icub-grasp.sh  icub-grasp.xml
src/: CMakeLists.txt  cardinal_points_grasp.h  grasp.thrift  main.cpp  model_eraser.cpp  model_mover.cpp  rpc.thrift  segmentation.h  viewer.h
